--- a/src/JAM.Netduino3.App/JAM.Netduino3.App.csproj
+++ b/src/JAM.Netduino3.App/JAM.Netduino3.App.csproj
@@ -35,6 +35,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="ConfigHelper.cs" />
     <Compile Include="Enviroment.cs" />
     <Compile Include="Helpers\DDNS.cs" />
     <Compile Include="Helpers\Ntp.cs" />
