GrowControlOffline added but not tested yet

--- a/src/JAM.Netduino3.App/JAM.Netduino3.App.csproj
+++ b/src/JAM.Netduino3.App/JAM.Netduino3.App.csproj
@@ -37,8 +37,10 @@
   <ItemGroup>
     <Compile Include="Constants.cs" />
     <Compile Include="Enviroment.cs" />
+    <Compile Include="GrowControlOffline.cs" />
     <Compile Include="Helpers\Config.cs" />
     <Compile Include="Helpers\DDNS.cs" />
+    <Compile Include="Helpers\GrowControlOffline.cs" />
     <Compile Include="Helpers\IO.cs" />
     <Compile Include="Helpers\Iot.cs" />
     <Compile Include="Helpers\Net.cs" />
