--- a/src/JAM.Netduino3.App/JAM.Netduino3.App.csproj
+++ b/src/JAM.Netduino3.App/JAM.Netduino3.App.csproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <Compile Include="Constants.cs" />
     <Compile Include="Enviroment.cs" />
+    <Compile Include="Handlers\RelaysHandler.cs" />
     <Compile Include="Helpers\Config.cs" />
     <Compile Include="Helpers\DDNS.cs" />
     <Compile Include="Helpers\GrowControl.cs" />
