division by zero fixed

--- a/src/SD/webroot/config.ini
+++ b/src/SD/webroot/config.ini
@@ -1,3 +1,5 @@
+local.name=GrowControl JAM
+local.description=Netduino 3 Wifi + 8 Relay => GrowControl
 local.application.port=80
 local.application.maxworkerthreadcount=32
 local.filesystemhandler.enabledirectorybrowsing=true
