testing registration on demand

--- a/src/JAM.Netduino3.App/JAM.Netduino3.App.csproj
+++ b/src/JAM.Netduino3.App/JAM.Netduino3.App.csproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <Compile Include="Constants.cs" />
     <Compile Include="Enviroment.cs" />
+    <Compile Include="Handlers\RegisterHandler.cs" />
     <Compile Include="Handlers\RelaysReadHandler.cs" />
     <Compile Include="Handlers\RelaysChangeHandler.cs" />
     <Compile Include="Helpers\Config.cs" />
