--- a/src/JAM.Netduino3.Web/Properties/launchSettings.json
+++ b/src/JAM.Netduino3.Web/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:5000",
+      "applicationUrl": "http://iot.jamtech.cl:5000",
       "sslPort": 0
     }
   },
