--- a/src/JAM.Netduino3.Web/project.json
+++ b/src/JAM.Netduino3.Web/project.json
@@ -43,7 +43,8 @@
     "Microsoft.Extensions.Logging": "1.1.0",
     "Microsoft.Extensions.Logging.Debug": "1.1.0",
     "Swashbuckle": "6.0.0-beta901",
-    "Microsoft.AspNetCore.Mvc": "1.1.1"
+    "Microsoft.AspNetCore.Mvc": "1.1.1",
+    "RestSharp.NetCore": "105.2.3"
   },
 
   "tools": {
